# newscompiler

./: .gitignore  MANIFEST.in  README.md  newscompiler.py  pdf_gen.py  requirements.txt  setup.cfg  setup.py
newscompiler/: __init__.py  main.py  news.py  parser.py  printer.py  tools.py
