[metadata]
name = newscompiler
version = 0.3.0
description = Compilation of news for a given subject.
long_description = file: README.md
author = Cauã Bernardino
url = https://github.com/cauabernardino/newscompiler
classifiers =
    Programming Language :: Python :: 3
    Environment :: Console
    Topic :: Automation
    Topic :: CLI Tools

[options]
packages = find:
include_package_data = True
python_requires = >= 3.7
install_requires =
    lxml
    fpdf==1.7.2
    pyshorteners==1.0.1

[options.entry_points]
console_scripts =
    news = newscompiler.main:main

[options.packages.find]
exclude = 
    tests
    tests.*

[flake8]
max-line-length = 79
extend-ignore = E203
exclude =
    .git,
    __pycache__
    env,
    .tox,
    .eggs,
    build,
    dist